--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -9,7 +9,8 @@
     <string name="view_binding">View Binding</string>
     <string name="data_binding">Data Binding</string>
     <string name="room">Room</string>
-    <string name="show_data_model">Show data model</string>
+    <string name="method_reference">Method Reference</string>
+    <string name="listener_binding">Listener Binding</string>
     <string name="hello_second_activity">Hello Second Activity</string>
     <string name="start_second_activity">Start second activity</string>
     <string name="hint_first_name">Enter FirstName</string>
